objects/Cvent_Email_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Member_ID__c</fullName>
        <label>Account Team Member ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>Predefined Subject if Any</description>
        <inlineHelpText>Predefined Subject if Any</inlineHelpText>
        <label>Email Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placeholder_Attribute_1__c</fullName>
        <description>Placeholder 1 - Use this for any value you want to use as part of Email Template or Workflow Condition. For Release Management; we are using this placeholder to store the Release Name</description>
        <inlineHelpText>Placeholder 1 - Use this for any value you want to use as part of Email Template or Workflow Condition. For Release Management; we are using this placeholder to store the Release Name</inlineHelpText>
        <label>Placeholder Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placeholder_Attribute_2__c</fullName>
        <description>Placeholder 2 - Use this for any value you want to use as part of Email Template or Workflow Condition.</description>
        <inlineHelpText>Placeholder 2 - Use this for any value you want to use as part of Email Template or Workflow Condition.</inlineHelpText>
        <label>Placeholder Attribute 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <description>Email address for the intended recipient</description>
        <inlineHelpText>Email address for the intended recipient</inlineHelpText>
        <label>Recipient Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient_Manager_Email__c</fullName>
        <label>Recipient Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <description>Full Name for the Recipient</description>
        <inlineHelpText>Full Name for the Recipient</inlineHelpText>
        <label>Recipient Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_User_Id__c</fullName>
        <label>Recipient User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_API_Name__c</fullName>
        <description>Provide the Object API Name for the source record</description>
        <inlineHelpText>Provide the Object API Name for the source record</inlineHelpText>
        <label>Source Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Process__c</fullName>
        <description>Identify the source process for which this notification is generated</description>
        <inlineHelpText>Identify the source process for which this notification is generated</inlineHelpText>
        <label>Source Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ReleaseManagement</fullName>
                </value>
                <value>
                    <fullName>AccountTeamAssignment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Identifies the source record for which this email is being generated. This could be used in advanced VF templates to pull more information about the source record</description>
        <inlineHelpText>Identifies the source record for which this email is being generated. This could be used in advanced VF templates to pull more information about the source record</inlineHelpText>
        <label>Source Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Time__c</fullName>
        <description>Use this field to schedule time based notifications</description>
        <inlineHelpText>Use this field to schedule time based notifications</inlineHelpText>
        <label>Trigger Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>$ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>This object is a custom framework to send out email notifications for objects that are not supported otherwise for workflow email alerts. For example; Account Team
Any record created in this object should trigger an email alert (using native workflow) using the Recipient and Subject information. A batch job would purge this object for all records created as of Yesterday.</description>
    <label>Cvent Email Notification</label>
    <nameField>
        <displayFormat>N-{00000000}</displayFormat>
        <label>Cvent Email Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Email Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Source_Process__c</columns>
        <columns>Email_Subject__c</columns>
        <columns>Recipient_Email__c</columns>
        <columns>Recipient_Name__c</columns>
        <columns>Recipient_User_Id__c</columns>
        <columns>Source_Object_API_Name__c</columns>
        <columns>Source_Record_Id__c</columns>
        <columns>Trigger_Time__c</columns>
        <columns>Placeholder_Attribute_1__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>